syntax = "proto3";

// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";

package protos;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc TellMeSomething(HelloRequest) returns (stream Something){}
  rpc TellYouSomething(stream Something) returns(HelloReply){}
  rpc TalkWithMe(stream Something) returns(stream Something){}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

message Something{
  int64 lineCode = 1;
  string line = 2;
}
